feat: add swagger for base endpoints
