# docs/swagger.yaml
@@ -1,9 +1,111 @@
 basePath: /
 definitions:
+  internal_controller_http_v1.categoryDTO:
+    properties:
+      name:
+        type: string
+      uuid:
+        type: string
+    type: object
+  internal_controller_http_v1.categoryListResponse:
+    properties:
+      categories:
+        items:
+          $ref: '#/definitions/internal_controller_http_v1.categoryDTO'
+        type: array
+    type: object
+  internal_controller_http_v1.citizenshipDTO:
+    properties:
+      name:
+        type: string
+      uuid:
+        type: string
+    type: object
+  internal_controller_http_v1.citizenshipListResponse:
+    properties:
+      citizenships:
+        items:
+          $ref: '#/definitions/internal_controller_http_v1.citizenshipDTO'
+        type: array
+    type: object
+  internal_controller_http_v1.countryDTO:
+    properties:
+      code:
+        type: string
+      name:
+        type: string
+      uuid:
+        type: string
+    type: object
+  internal_controller_http_v1.countryListResponse:
+    properties:
+      countries:
+        items:
+          $ref: '#/definitions/internal_controller_http_v1.countryDTO'
+        type: array
+    type: object
+  internal_controller_http_v1.eduspecialityDTO:
+    properties:
+      code:
+        type: string
+      name:
+        type: string
+      uuid:
+        type: string
+    type: object
+  internal_controller_http_v1.eduspecialityListResponse:
+    properties:
+      eduspecialities:
+        items:
+          $ref: '#/definitions/internal_controller_http_v1.eduspecialityDTO'
+        type: array
+    type: object
+  internal_controller_http_v1.employmentDTO:
+    properties:
+      name:
+        type: string
+      uuid:
+        type: string
+      value:
+        type: string
+    type: object
+  internal_controller_http_v1.employmentListResponse:
+    properties:
+      employments:
+        items:
+          $ref: '#/definitions/internal_controller_http_v1.employmentDTO'
+        type: array
+    type: object
   internal_controller_http_v1.errResponse:
     properties:
       error:
         type: string
+    type: object
+  internal_controller_http_v1.projectDTO:
+    properties:
+      category_uuid:
+        type: string
+      creator_uuid:
+        type: string
+      description:
+        type: string
+      is_visible:
+        type: string
+      name:
+        type: string
+      presentation_link:
+        type: string
+      project_link:
+        type: string
+      uuid:
+        type: string
+    type: object
+  internal_controller_http_v1.projectListResponse:
+    properties:
+      projects:
+        items:
+          $ref: '#/definitions/internal_controller_http_v1.projectDTO'
+        type: array
     type: object
   internal_controller_http_v1.registerRequest:
     properties:
@@ -17,10 +119,142 @@ definitions:
       uuid:
         type: string
     type: object
+  internal_controller_http_v1.specializationDTO:
+    properties:
+      name:
+        type: string
+      uuid:
+        type: string
+      value:
+        type: string
+    type: object
+  internal_controller_http_v1.specializationListResponse:
+    properties:
+      specializations:
+        items:
+          $ref: '#/definitions/internal_controller_http_v1.specializationDTO'
+        type: array
+    type: object
+  internal_controller_http_v1.universityDTO:
+    properties:
+      name:
+        type: string
+      uuid:
+        type: string
+    type: object
+  internal_controller_http_v1.universityListResponse:
+    properties:
+      universities:
+        items:
+          $ref: '#/definitions/internal_controller_http_v1.universityDTO'
+        type: array
+    type: object
+  lg_internal_controller_http_v1.categoryDTO:
+    properties:
+      name:
+        type: string
+      uuid:
+        type: string
+    type: object
+  lg_internal_controller_http_v1.categoryListResponse:
+    properties:
+      categories:
+        items:
+          $ref: '#/definitions/lg_internal_controller_http_v1.categoryDTO'
+        type: array
+    type: object
+  lg_internal_controller_http_v1.citizenshipDTO:
+    properties:
+      name:
+        type: string
+      uuid:
+        type: string
+    type: object
+  lg_internal_controller_http_v1.citizenshipListResponse:
+    properties:
+      citizenships:
+        items:
+          $ref: '#/definitions/lg_internal_controller_http_v1.citizenshipDTO'
+        type: array
+    type: object
+  lg_internal_controller_http_v1.countryDTO:
+    properties:
+      code:
+        type: string
+      name:
+        type: string
+      uuid:
+        type: string
+    type: object
+  lg_internal_controller_http_v1.countryListResponse:
+    properties:
+      countries:
+        items:
+          $ref: '#/definitions/lg_internal_controller_http_v1.countryDTO'
+        type: array
+    type: object
+  lg_internal_controller_http_v1.eduspecialityDTO:
+    properties:
+      code:
+        type: string
+      name:
+        type: string
+      uuid:
+        type: string
+    type: object
+  lg_internal_controller_http_v1.eduspecialityListResponse:
+    properties:
+      eduspecialities:
+        items:
+          $ref: '#/definitions/lg_internal_controller_http_v1.eduspecialityDTO'
+        type: array
+    type: object
+  lg_internal_controller_http_v1.employmentDTO:
+    properties:
+      name:
+        type: string
+      uuid:
+        type: string
+      value:
+        type: string
+    type: object
+  lg_internal_controller_http_v1.employmentListResponse:
+    properties:
+      employments:
+        items:
+          $ref: '#/definitions/lg_internal_controller_http_v1.employmentDTO'
+        type: array
+    type: object
   lg_internal_controller_http_v1.errResponse:
     properties:
       error:
         type: string
+    type: object
+  lg_internal_controller_http_v1.projectDTO:
+    properties:
+      category_uuid:
+        type: string
+      creator_uuid:
+        type: string
+      description:
+        type: string
+      is_visible:
+        type: string
+      name:
+        type: string
+      presentation_link:
+        type: string
+      project_link:
+        type: string
+      uuid:
+        type: string
+    type: object
+  lg_internal_controller_http_v1.projectListResponse:
+    properties:
+      projects:
+        items:
+          $ref: '#/definitions/lg_internal_controller_http_v1.projectDTO'
+        type: array
     type: object
   lg_internal_controller_http_v1.registerRequest:
     properties:
@@ -33,6 +267,36 @@ definitions:
     properties:
       uuid:
         type: string
+    type: object
+  lg_internal_controller_http_v1.specializationDTO:
+    properties:
+      name:
+        type: string
+      uuid:
+        type: string
+      value:
+        type: string
+    type: object
+  lg_internal_controller_http_v1.specializationListResponse:
+    properties:
+      specializations:
+        items:
+          $ref: '#/definitions/lg_internal_controller_http_v1.specializationDTO'
+        type: array
+    type: object
+  lg_internal_controller_http_v1.universityDTO:
+    properties:
+      name:
+        type: string
+      uuid:
+        type: string
+    type: object
+  lg_internal_controller_http_v1.universityListResponse:
+    properties:
+      universities:
+        items:
+          $ref: '#/definitions/lg_internal_controller_http_v1.universityDTO'
+        type: array
     type: object
 host: localhost:9000
 info:
@@ -63,4 +327,124 @@ paths:
       summary: registration
       tags:
       - Posts
+  /api/v1/category:
+    get:
+      description: Get all categories
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/internal_controller_http_v1.categoryListResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/internal_controller_http_v1.errResponse'
+      summary: GetAllCategory
+      tags:
+      - Categories
+  /api/v1/citizenship:
+    get:
+      description: Get all citizenships
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/lg_internal_controller_http_v1.citizenshipListResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/lg_internal_controller_http_v1.errResponse'
+      summary: GetAllCitizenships
+      tags:
+      - Citizenships
+  /api/v1/country:
+    get:
+      description: Get all countries
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/lg_internal_controller_http_v1.countryListResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/lg_internal_controller_http_v1.errResponse'
+      summary: GetAllCountries
+      tags:
+      - Countries
+  /api/v1/eduspeciality:
+    get:
+      description: Get all eduspecialities
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/internal_controller_http_v1.eduspecialityListResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/internal_controller_http_v1.errResponse'
+      summary: GetAllEduspecialities
+      tags:
+      - Eduspecialities
+  /api/v1/employment:
+    get:
+      description: Get all employments
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/internal_controller_http_v1.employmentListResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/internal_controller_http_v1.errResponse'
+      summary: GetAllEmployments
+      tags:
+      - Employments
+  /api/v1/project:
+    get:
+      description: Get all projects
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/lg_internal_controller_http_v1.projectListResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/lg_internal_controller_http_v1.errResponse'
+      summary: GetAllProjects
+      tags:
+      - Projects
+  /api/v1/specialization:
+    get:
+      description: Get all specializations
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/internal_controller_http_v1.specializationListResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/internal_controller_http_v1.errResponse'
+      summary: GetAllSpecializations
+      tags:
+      - Specializations
+  /api/v1/university:
+    get:
+      description: Get all universities
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/internal_controller_http_v1.universityListResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/internal_controller_http_v1.errResponse'
+      summary: GetAllUniversities
+      tags:
+      - Universities
 swagger: "2.0"
